# pyreml

./: .gitignore  .nojekyll  .zenodo.json  CITATION.cff  README.md  building_models.html  contact.html  fixed_random.html  index.html  kinships.html  larix.html  license.html  meta.yaml  multivariate.html  prediction.html  pyproject.toml  random_regression.html  robots.txt  search.json  sitemap.xml  training.html  variance_structures.html
.github/workflows/: ci.yml  release.yml
doc/: _quarto.yaml  building_models.qmd  contact.qmd  fixed_random.qmd  index.qmd  kinships.qmd  larix.qmd  license.qmd  multivariate.qmd  prediction.qmd  random_regression.qmd  references.bib  theme.scss  training.qmd  variance_structures.qmd
pyreml/: GaussianComponents.py  MixedModel.py  Optimizer.py  __init__.py  kinships.py  larix.py  nearPD.py
pyreml/data/: Larix.csv
site_libs/bootstrap/: bootstrap-4a42c81125aa3267f54bcc17d77c9939.min.css  bootstrap-8124cdf9140e22d01433ca88cc906b30.min.css  bootstrap-de42293df4d7d23142326e602c94d62a.min.css
tests/: test_doc.py  test_genomics.py  test_pedigree.py  test_regression.py  test_spatial.py
tests/data/: doc_fa.json  doc_regression.json  doc_spatial.json  genomic_blkr.json  genomic_fa.json  genomic_het.json  genomic_sim.json  pedigree_diag.json  pedigree_kinship.json  pedigree_str.json  pedigree_uni.json  regression_fixed.json  regression_random.json  spat_1d.json  spat_1d_pred.json  spat_ani.json  spat_ani2d.json  spat_ani2d_pred.json  spat_ani_pred.json  spat_dist.json  spat_dist_pred.json  spat_iso.json  spat_iso2d_pred.json  spat_iso_pred.json  spatial.json  spatial_pred.json
tests/reference/: doc.py  genomic.py  pedigree.py  regression.py  spatial.py
