[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyreml"
version = "0.2.1"
readme = "README.md" 
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "pandas",
    "patsy",
]

authors = [
  {name = "Alexandre Marchal"},
  {name = "Daniele Raimondi"},
]
license = "GPL-3.0-or-later"
description = "General-purpose linear mixed model solver."
[project.urls]
Homepage = "https://github.com/ai-for-genome-interpretation-lab/pyreml"
Documentation = "https://ai-for-genome-interpretation-lab.github.io/pyreml/"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyreml*"]

[tool.setuptools.package-data]
pyreml = ["data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
