[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyreml"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "pandas",
    "patsy",
]

authors = [
  {name = "Alexandre Marchal"},
  {name = "Daniele Raimondi"},
]
license = "GPL-3.0-or-later"
description = "General-purpose linear mixed model solver."
[project.urls]
Homepage = "https://github.com/ai-for-genome-interpretation-lab/pyreml"
Documentation = "https://ai-for-genome-interpretation-lab.github.io/pyreml/"

[tool.setuptools.dynamic]
version = {attr = "pyreml._version.__version__"}

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyreml*"]

[tool.setuptools.package-data]
pyreml = ["data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
